<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mealdetail.view.MealDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/details_item_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="16dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            >

            <ImageView
                android:id="@+id/mealImage"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:backgroundTint="#F44336"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="42dp"
                android:layout_gravity="right"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageViewAddToCalendarItemDetails"
                    android:layout_width="26dp"
                    android:layout_height="33dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/details_image_bg"
                    android:padding="4dp"
                    android:src="@drawable/calendar_icon" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageViewAddToFavITemDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/details_image_bg"
                    android:padding="4dp"
                    android:src="@drawable/ic_not_fav" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:gravity="center"

                >

                <TextView
                    android:id="@+id/txtViewMealNameItemDetails"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_item_card" />

                <TextView
                    android:id="@+id/textViewMealCateItemDetails"
                    style="@style/base_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="@+id/txtViewMealNameItemDetails"
                    app:layout_constraintStart_toStartOf="@+id/txtViewMealNameItemDetails"
                    app:layout_constraintTop_toBottomOf="@+id/txtViewMealNameItemDetails"
                    tools:text=" category" />

                <TextView
                    android:id="@+id/textViewMealCountryItemDetails"
                    style="@style/base_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="@+id/textViewMealCateItemDetails"
                    app:layout_constraintStart_toStartOf="@+id/textViewMealCateItemDetails"
                    app:layout_constraintTop_toBottomOf="@+id/textViewMealCateItemDetails"

                    tools:text=" food" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_ingredients_meal_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/main_ingredients"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_item_card" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewIngredientsItemDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/details_item_card"
            app:layout_constraintTop_toBottomOf="@+id/tv_ingredients_meal_details"
            tools:itemCount="10"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:orientation="horizontal" />
        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/procedures"
            app:layout_constraintStart_toStartOf="@+id/tv_ingredients_meal_details"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewIngredientsItemDetails" />
        <TextView
            android:id="@+id/textViewProcedures"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/barlow"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/textView25"
            app:layout_constraintTop_toBottomOf="@+id/textView25"
            tools:text="@string/procedures" />
        <TextView
            android:id="@+id/textView10"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/take_a_look_to_learn"
            app:layout_constraintStart_toStartOf="@+id/textView25"
            app:layout_constraintTop_toBottomOf="@+id/textViewProcedures" />
        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ytPlayer"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"

            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/textView10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>